Fix global search icon position on Safari 9

--- a/www/src/js/views/layout/GlobalSearch.scss
+++ b/www/src/js/views/layout/GlobalSearch.scss
@@ -21,6 +21,7 @@ $icon-dist-lg: $input-width-open-lg - $input-width;
 
 .icon {
   position: absolute;
+  top: 0.3rem; // For Safari 9
   right: $icon-dist + $container-padding;
   width: $icon-size;
   height: $icon-size;
